@@ -1,67 +1,0 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.admin.gpstracker.createPathActivity"
-    android:clickable="true"
-    android:background="#8c8888">
-
-    <fragment
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/mapFragment"
-        android:layout_alignParentStart="true"
-        android:layout_above="@+id/button"
-        android:layout_marginBottom="5dp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Receive Locations"
-        android:id="@+id/button"
-        android:clickable="true"
-        android:height="40dp"
-        android:background="#00fd01"
-        android:textSize="15dp"
-        android:textAlignment="center"
-        android:singleLine="false"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_toStartOf="@+id/backButton" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Go Back"
-        android:id="@+id/backButton"
-        android:layout_alignTop="@+id/button"
-        android:layout_alignParentEnd="true"
-        android:clickable="true"
-        android:nestedScrollingEnabled="false" />
-
-    <ScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/scrollView2"
-        android:layout_alignTop="@+id/mapFragment"
-        android:layout_above="@+id/button"
-        android:layout_marginBottom="5dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:id="@+id/geopointTable"
-            android:layout_alignEnd="@+id/mapFragment"
-            android:layout_alignParentStart="true"
-            android:layout_alignBottom="@+id/mapFragment"
-            android:layout_alignTop="@+id/mapFragment" />
-    </ScrollView>
-
-</RelativeLayout>
